--- a/Happy.ipynb
+++ b/Happy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "romantic-concord",
+   "id": "decreased-drama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "million-merit",
+   "id": "entitled-blond",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,9 @@
     }
    ],
    "source": [
-    "# Import first file (2015) for cleaning\n",
+    "# Import & compare file heads of our various CSVs. We'll use 2019.csv as our template and create new\n",
+    "# dataframes of off the rest to ensure the data is congruent.\n",
+    "\n",
     "csvpath_2015 = os.path.join('Resources', '2015.csv')\n",
     "csvpath_2016 = os.path.join('Resources', '2016.csv')\n",
     "csvpath_2017 = os.path.join('Resources', '2017.csv')\n",
@@ -185,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "korean-remains",
+   "id": "interesting-continent",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "driven-montana",
+   "id": "quiet-tourist",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "muslim-louisville",
+   "id": "still-orchestra",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "careful-attachment",
+   "id": "stuffed-medicaid",
    "metadata": {},
    "outputs": [
     {
