--- a/Happy.ipynb
+++ b/Happy.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "decreased-drama",
+   "execution_count": 2,
+   "id": "typical-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "entitled-blond",
+   "execution_count": 3,
+   "id": "reverse-remedy",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4     0.45811            2.45176  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,8 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "interesting-continent",
+   "execution_count": 4,
+   "id": "alert-amplifier",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "4                        0.41004     0.25492            2.82596  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "quiet-tourist",
+   "execution_count": 5,
+   "id": "dimensional-comment",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "4    0.245483                       0.382612           2.430182  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,8 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "still-orchestra",
+   "execution_count": 6,
+   "id": "treated-circle",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "4                      0.357  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "stuffed-medicaid",
+   "execution_count": 7,
+   "id": "developed-engineer",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "4                      0.298  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,6 +775,177 @@
    "source": [
     "csv_2019 = pd.read_csv(csvpath_2019)\n",
     "csv_2019.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "visible-casting",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Happiness.Rank</th>\n",
+       "      <th>Happiness.Score</th>\n",
+       "      <th>Whisker.high</th>\n",
+       "      <th>Whisker.low</th>\n",
+       "      <th>Economy..GDP.per.Capita.</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health..Life.Expectancy.</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Trust..Government.Corruption.</th>\n",
+       "      <th>Dystopia.Residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.537</td>\n",
+       "      <td>7.594445</td>\n",
+       "      <td>7.479556</td>\n",
+       "      <td>1.616463</td>\n",
+       "      <td>1.533524</td>\n",
+       "      <td>0.796667</td>\n",
+       "      <td>0.635423</td>\n",
+       "      <td>0.362012</td>\n",
+       "      <td>0.315964</td>\n",
+       "      <td>2.277027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.522</td>\n",
+       "      <td>7.581728</td>\n",
+       "      <td>7.462272</td>\n",
+       "      <td>1.482383</td>\n",
+       "      <td>1.551122</td>\n",
+       "      <td>0.792566</td>\n",
+       "      <td>0.626007</td>\n",
+       "      <td>0.355280</td>\n",
+       "      <td>0.400770</td>\n",
+       "      <td>2.313707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.504</td>\n",
+       "      <td>7.622030</td>\n",
+       "      <td>7.385970</td>\n",
+       "      <td>1.480633</td>\n",
+       "      <td>1.610574</td>\n",
+       "      <td>0.833552</td>\n",
+       "      <td>0.627163</td>\n",
+       "      <td>0.475540</td>\n",
+       "      <td>0.153527</td>\n",
+       "      <td>2.322715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.494</td>\n",
+       "      <td>7.561772</td>\n",
+       "      <td>7.426227</td>\n",
+       "      <td>1.564980</td>\n",
+       "      <td>1.516912</td>\n",
+       "      <td>0.858131</td>\n",
+       "      <td>0.620071</td>\n",
+       "      <td>0.290549</td>\n",
+       "      <td>0.367007</td>\n",
+       "      <td>2.276716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.469</td>\n",
+       "      <td>7.527542</td>\n",
+       "      <td>7.410458</td>\n",
+       "      <td>1.443572</td>\n",
+       "      <td>1.540247</td>\n",
+       "      <td>0.809158</td>\n",
+       "      <td>0.617951</td>\n",
+       "      <td>0.245483</td>\n",
+       "      <td>0.382612</td>\n",
+       "      <td>2.430182</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country  Happiness.Rank  Happiness.Score  Whisker.high  Whisker.low  \\\n",
+       "0       Norway               1            7.537      7.594445     7.479556   \n",
+       "1      Denmark               2            7.522      7.581728     7.462272   \n",
+       "2      Iceland               3            7.504      7.622030     7.385970   \n",
+       "3  Switzerland               4            7.494      7.561772     7.426227   \n",
+       "4      Finland               5            7.469      7.527542     7.410458   \n",
+       "\n",
+       "   Economy..GDP.per.Capita.    Family  Health..Life.Expectancy.   Freedom  \\\n",
+       "0                  1.616463  1.533524                  0.796667  0.635423   \n",
+       "1                  1.482383  1.551122                  0.792566  0.626007   \n",
+       "2                  1.480633  1.610574                  0.833552  0.627163   \n",
+       "3                  1.564980  1.516912                  0.858131  0.620071   \n",
+       "4                  1.443572  1.540247                  0.809158  0.617951   \n",
+       "\n",
+       "   Generosity  Trust..Government.Corruption.  Dystopia.Residual  \n",
+       "0    0.362012                       0.315964           2.277027  \n",
+       "1    0.355280                       0.400770           2.313707  \n",
+       "2    0.475540                       0.153527           2.322715  \n",
+       "3    0.290549                       0.367007           2.276716  \n",
+       "4    0.245483                       0.382612           2.430182  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_2017.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "supported-startup",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2019 & 2018 datasets are the same in structure & column naming convention.  Restructure / Rename\n",
+    "# datasets from 2015 - 2017.\n",
+    "\n",
+    "# df = df[['mean', 4,3,2,1]]\n",
+    "\n",
+    "csv_2017_restructured = csv_2017[[\"Happiness.Rank\",\n",
+    "                                  \"Country\",\n",
+    "                                  \"Happiness.Score\",\n",
+    "                                  \"Economy..GDP.per.Capita.\"]]"
    ]
   }
  ],
